# janus

./: .env.example  .gitignore  README.md  README.zh.md  hacs.json  pyproject.toml
data/: benchmark.jsonl  benchmark_devices.json  devices.json  testset.jsonl
docs/: benchmark-results.md  phase1-validation.md
gatekeeper/: audit.py  cli.py  config.py  context.py  controller.py  curation.py  engine.py  ha_client.py  ha_mapping.py  habit_mining.py  habits.py  local_parser.py  models.py  observations.py  parser.py  phrasing.py  prompts.py  queries.py  registry.py  replies.py  session.py  trigger_habits.py  validator.py
harness/: deploy_janus.sh  p36_e2e_check.py  p3_ws_snapshot.py  p4_intent_check.py  run_benchmark.py  run_validation.py  vendor.sh
service/: __main__.py  app.py  audit.py  config.py  deadline.py  device_dto.py  dto.py  engine_factory.py  pin_store.py  schedule_build.py  schedule_store.py  schedule_time.py  scheduler.py  scheduler_tz.py  sessions.py
tests/: _helpers.py  conftest.py  test_app.py  test_app_ingress.py  test_audit.py  test_audit_sink.py  test_benchmark_harness.py  test_bridge.py  test_cli.py  test_config.py  test_context.py  test_controller.py  test_curation.py  test_deadline.py  test_device_dto.py  test_dto.py  test_engine.py  test_engine_factory.py  test_grading.py  test_ha_client.py  test_ha_mapping.py  test_habit_mining.py  test_habits.py  test_local_parser.py  test_models.py  test_nl_schedule_turn.py  test_observations.py  test_parser.py  test_phrasing.py  test_pin_store.py  test_prompts.py  test_proposals.py  test_queries.py  (+17 more)
(+75 files in other folders)
