[project]
name = "gatekeeper"
version = "0.1.0"
description = "Reliable AI gatekeeper layer on top of Home Assistant"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gatekeeper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
