[project]
name = "gatekeeper"
version = "0.1.0"
description = "Reliable AI gatekeeper layer on top of Home Assistant"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39",
    "pydantic>=2.5",
    "openai>=1.40",
    "httpx>=0.27",
    "websocket-client>=1.7",
]

[project.scripts]
gatekeeper = "gatekeeper.cli:main"
janus-service = "service.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
service = ["fastapi>=0.110", "uvicorn>=0.29"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gatekeeper", "service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
